time alignment fix

--- a/style.css
+++ b/style.css
@@ -748,6 +748,7 @@ li {
 }
 
 .container__list--media {
+    display: flex;
     position: relative;
 }
 
